fix: reduce spacing on top

--- a/src/assets/css/tolkits.css
+++ b/src/assets/css/tolkits.css
@@ -8663,7 +8663,7 @@ ul.sport {
 @media (max-width: 1014px) {
 
     .amt {
-        margin-top: 90px;
+        margin-top: 75px;
     }
     .move-up {
         margin-top: -10px
